fix bio overflow

--- a/src/components/ListaDePersonas/ListaDePersonas.scss
+++ b/src/components/ListaDePersonas/ListaDePersonas.scss
@@ -12,5 +12,8 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4; /* start showing ellipsis when 4rd line is reached */
         white-space: pre-wrap;
+        p { 
+            padding: 0;
+        }
     }
 }
